--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 GOOGLE_API_KEY = "AIzaSyCDnopwcVoTZrGwEI3KNLCLJMBlol2Rv-o"
+
+FIREBASE_DATABASE_URL=https://healthbot-ceb8d-default-rtdb.asia-southeast1.firebasedatabase.app
