--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+streamlit
+PyMuPDF
 python-dotenv
-google.generativeai
-pillow
-pathlib
-streamlit_option_menu
-pymupdf
+google-generativeai
+Pillow
+streamlit-option-menu
+firebase-admin
+pandas
+plotly
